Revert "chore: fix cover gets distorted on safari"
This reverts commit 98daaff03aeec00db0c66931f3f1bbae9966e777.

--- a/web/app/assets/stylesheets/components/_release.scss
+++ b/web/app/assets/stylesheets/components/_release.scss
@@ -52,7 +52,7 @@ $animation-duration: 0.3s;
 
   &__cover-image {
     height: 100%;
-    position: absolute;
+    width: auto;
 
     opacity: 0;
     transition: opacity $animation-duration;
